feat: make inactivated users distinguishable

--- a/cider-ci/generators/plain_features.yml
+++ b/cider-ci/generators/plain_features.yml
@@ -2010,13 +2010,13 @@
   name: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb[1:1]"
   description: 'Resource: MediaEntry shows users as deactivated'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb:22"
+    RSPEC_NAME: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb:21"
     RSPEC_TEST: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb[1:1]"
 "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb[1:2]":
   name: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb[1:2]"
   description: 'Resource: MediaEntry shows responsible user as deactivated'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb:36"
+    RSPEC_NAME: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb:35"
     RSPEC_TEST: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb[1:2]"
 "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:1]":
   name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:1]"
@@ -4138,7 +4138,7 @@
     RSPEC_TEST: "./spec/features/translations/meta_key_and_context_key_translations_spec.rb[1:1:1]"
 "./spec/features/users_spec.rb[1:1]":
   name: "./spec/features/users_spec.rb[1:1]"
-  description: Users show deactivated user as Gelöschter User
+  description: Users show deactivated user as user-xxxxxxxx
   environment_variables:
     RSPEC_NAME: "./spec/features/users_spec.rb:16"
     RSPEC_TEST: "./spec/features/users_spec.rb[1:1]"
