--- a/cider-ci/generators/plain_features.yml
+++ b/cider-ci/generators/plain_features.yml
@@ -1877,58 +1877,65 @@
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:3]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:3]"
   description: 'Resource: MediaEntry Action: create (upload/import) upload a single
-    image'
+    jpg image'
   environment_variables:
     RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:43"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:3]"
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:4]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:4]"
-  description: 'Resource: MediaEntry Action: create (upload/import) upload a too large
-    image'
+  description: 'Resource: MediaEntry Action: create (upload/import) upload a single
+    tiff image'
   environment_variables:
     RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:56"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:4]"
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:5]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:5]"
-  description: 'Resource: MediaEntry Action: create (upload/import) upload a single
-    pdf'
+  description: 'Resource: MediaEntry Action: create (upload/import) upload a too large
+    image'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:70"
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:69"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:5]"
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:6]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:6]"
-  description: 'Resource: MediaEntry Action: create (upload/import) upload multiple
-    files'
+  description: 'Resource: MediaEntry Action: create (upload/import) upload a single
+    pdf'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:84"
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:83"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:6]"
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:7]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:7]"
-  description: 'Resource: MediaEntry Action: create (upload/import) Default License
-    and Usage are applied on upload as configured'
+  description: 'Resource: MediaEntry Action: create (upload/import) upload multiple
+    files'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:108"
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:97"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:7]"
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:8]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:8]"
+  description: 'Resource: MediaEntry Action: create (upload/import) Default License
+    and Usage are applied on upload as configured'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:121"
+    RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:8]"
+"./spec/features/media_entry/media_entry_upload_spec.rb[1:1:9]":
+  name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:9]"
   description: 'Resource: MediaEntry Action: create (upload/import) File metadata
     is extracted and mapped via IoMappings to MetaData'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:128"
-    RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:8]"
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:141"
+    RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:1:9]"
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:2:1:1]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:2:1:1]"
   description: 'Resource: MediaEntry Copying meta datum from another media entry when
     user has no relation with media entry the user is not allowed to make a copy'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:188"
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:201"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:2:1:1]"
 "./spec/features/media_entry/media_entry_upload_spec.rb[1:2:2:1]":
   name: "./spec/features/media_entry/media_entry_upload_spec.rb[1:2:2:1]"
   description: 'Resource: MediaEntry Copying meta datum from another media entry when
     user is a responsible for media entry Display header with configuration options'
   environment_variables:
-    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:198"
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_upload_spec.rb:211"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_upload_spec.rb[1:2:2:1]"
 "./spec/features/media_entry/permissions/close_and_cancel_spec.rb[1:1]":
   name: "./spec/features/media_entry/permissions/close_and_cancel_spec.rb[1:1]"
