feat: new meta data roles concept refactoring

--- a/cider-ci.yml
+++ b/cider-ci.yml
@@ -17,7 +17,7 @@ jobs:
 
   general-feature-tests:
     name: 'General Feature Tests'
-    depends_on: &PLAIN_DEP
+    run_when: &PLAIN_DEP
       basic-rspec-tests:
         job_key: basic-rspec-tests
         type: job
@@ -26,14 +26,12 @@ jobs:
         job_key: check-feature-tasks
         type: job
         states: [passed]
-    run_when: *PLAIN_DEP
     context:
       include: cider-ci/context-components/general-feature-tests.yml
 
   embed-feature-tests:
     name: 'Embed Feature Tests'
     priority: 2
-    depends_on: *PLAIN_DEP
     run_when: *PLAIN_DEP
     context:
       include: cider-ci/context-components/embed-feature-tests.yml
@@ -41,7 +39,6 @@ jobs:
   error-support-feature-tests:
     name: 'Error-Support Feature Tests'
     priority: 2
-    depends_on: *PLAIN_DEP
     run_when: *PLAIN_DEP
     context:
       include: cider-ci/context-components/error-support-feature-tests.yml
@@ -49,7 +46,6 @@ jobs:
   custom-path-feature-tests:
     name: 'Custom-Path Feature Tests'
     priority: 2
-    depends_on: *PLAIN_DEP
     run_when: *PLAIN_DEP
     context:
       include: cider-ci/context-components/custom-path-feature-tests.yml
