--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bulk-require": "1.0.0",
     "check-dependencies": "1.0.1",
     "classnames": "2.2.5",
+    "create-react-class": "^15.7.0",
     "font-awesome": "4.6.3",
     "fs-extra": "3.0.1",
     "global": "4.3.2",
@@ -55,12 +56,12 @@
     "moment": "2.18.1",
     "prop-types": "^15.6.1",
     "qs": "6.4.0",
-    "react": "15.6.1",
+    "react": "^16.14.0",
     "react-bootstrap": "0.31.0",
-    "react-day-picker": "4.0.0",
-    "react-dom": "15.6.1",
-    "react-file-drop": "0.1.8",
-    "react-waypoint": "7.0.3",
+    "react-day-picker": "^6.2.1",
+    "react-dom": "^16.14.0",
+    "react-file-drop": "^3.1.6",
+    "react-waypoint": "^8.1.0",
     "rusha": "0.8.6",
     "tachyons": "^4.7.1",
     "underscore.string": "3.3.5",
