--- a/package.json
+++ b/package.json
@@ -29,19 +29,18 @@
   "dependencies": {
     "@eins78/typeahead.js": "0.11.2-pre.1",
     "@eins78/typopro-open-sans": "0.0.0",
-    "@prettier/plugin-ruby": "^4.0.4",
     "active-lodash": "1.2.2",
     "ampersand-app": "2.0.0",
-    "ampersand-model": "6.0.2",
+    "ampersand-model": "^8.0.1",
     "ampersand-react-mixin": "github:eins78/ampersand-react-mixin#1e7b0c4",
-    "ampersand-rest-collection": "5.0.0",
+    "ampersand-rest-collection": "^6.0.0",
     "any_sha1": "0.1.1",
-    "async": "2.4.1",
+    "async": "^2.6.4",
     "babel-preset-react": "6.24.1",
     "babel-runtime": "6.23.0",
     "babyparse": "0.4.6",
-    "bulk-require": "1.0.0",
-    "check-dependencies": "1.0.1",
+    "bulk-require": "^1.0.1",
+    "check-dependencies": "^2.0.0",
     "classnames": "2.2.5",
     "create-react-class": "^15.7.0",
     "font-awesome": "4.6.3",
@@ -49,11 +48,11 @@
     "global": "4.3.2",
     "hashblot": "0.4.5",
     "history": "2.1.2",
-    "jquery": "2.2.4",
+    "jquery": "^3.7.1",
     "linkifyjs": "2.1.4",
     "local-links": "1.4.1",
-    "lodash": "4.17.19",
-    "moment": "2.18.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "prop-types": "^15.6.1",
     "qs": "6.4.0",
     "react": "^16.14.0",
@@ -62,9 +61,7 @@
     "react-dom": "^16.14.0",
     "react-file-drop": "^3.1.6",
     "react-waypoint": "^8.1.0",
-    "rusha": "0.8.6",
     "tachyons": "^4.7.1",
-    "underscore.string": "3.3.5",
     "uuid-validate": "0.0.2",
     "video.js": "5.16.0",
     "xhr": "2.4.0"
@@ -80,13 +77,11 @@
     "browserify": "^14.0.0",
     "browserify-incremental": "^3.1.1",
     "bulkify": "^1.4.2",
-    "cheerio": "^0.22.0",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
-    "i18n-iso-countries": "^1.11.0",
     "prettier": "^3.5.3",
     "prettier-eslint": "^16.3.0",
     "watchify": "^4.0.0"
