Remove node_modules from git submodule tracking
- Remove node_modules submodule (was pointing to madek-webapp-node-modules repo)
- Add node_modules/ to .gitignore
- Update .gitmodules to remove node_modules entry
- Add migration documentation

This allows for standard npm workflow and easier dependency management.
Dependencies are now installed via: npm install --include=dev --legacy-peer-deps

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ db/test_structure.sql
 deb/seeds.rb
 design/icon-font-sources/*.svg
 dev/node_modules/
+node_modules/
 doc/api/yard
 log/*.log
 log/searchd.development.pid
