--- a/cider-ci/context-components/lint/javascript-lint.yml
+++ b/cider-ci/context-components/lint/javascript-lint.yml
@@ -13,4 +13,5 @@
             #!/usr/bin/env bash
             set -euo pipefail
             ./bin/env/nodejs-setup
+            npm ci --legacy-peer-deps --ignore-scripts
             npm run lint
