--- a/cider-ci/context-components/precompilation.yml
+++ b/cider-ci/context-components/precompilation.yml
@@ -48,6 +48,8 @@ contexts:
             body: |
               #!/usr/bin/env bash
               set -euo pipefail
+              npm ci --legacy-peer-deps --ignore-scripts
+
               # NOTE: quickfix for a problem only in the CI: in the JSON output, there is a line prepended with just the string "true"
               # this is strange but no really worth investigation, just remove the string with `sed`.
               # (This started when upgrading from ruby 2.6 to ruby 2.7 which seems nosensical).
