chore: remove node_modules from version control

--- a/cider-ci/context-components/lint/javascript-lint.yml
+++ b/cider-ci/context-components/lint/javascript-lint.yml
@@ -13,4 +13,5 @@
             #!/usr/bin/env bash
             set -euo pipefail
             ./bin/env/nodejs-setup
+            npm ci --ignore-scripts --no-audit
             npm run lint
