--- a/cider-ci/context-components/precompilation.yml
+++ b/cider-ci/context-components/precompilation.yml
@@ -18,18 +18,10 @@ contexts:
             body: |
               #!/usr/bin/env bash
               set -euo pipefail
+              npm ci --ignore-scripts
               mv public/assets tmp/static_assets
               bin/precompile-assets
               cider-ci/bin/check-precompiled-assets tmp/static_assets public/assets
-
-  'npm':
-    tasks:
-      node-modules:
-        name: 'npm: node_modules are checked in'
-        git_options: { submodules: { include_match: ^node_modules$ } }
-        scripts:
-          test:
-            body: cider-ci/bin/check-node-modules
 
   'Docs/Specs':
     include:
@@ -48,6 +40,7 @@ contexts:
             body: |
               #!/usr/bin/env bash
               set -euo pipefail
+              npm ci --ignore-scripts --no-audit
               # NOTE: quickfix for a problem only in the CI: in the JSON output, there is a line prepended with just the string "true"
               # this is strange but no really worth investigation, just remove the string with `sed`.
               # (This started when upgrading from ruby 2.6 to ruby 2.7 which seems nosensical).
