chore: fix broken parts of styleguide

--- a/spec/_support/presenter_examples/meta_datum_input_examples.yaml
+++ b/spec/_support/presenter_examples/meta_datum_input_examples.yaml
@@ -6,6 +6,8 @@ examples:
     props:
       model:
         multiple: true
+        values: []
+        literal_values: []
       metaKey:
         is_extensible: true
         alphabetical_order: true
